[gd_scene load_steps=33 format=3 uid="uid://cjv6xlrsfrpv5"]

[ext_resource type="Script" path="res://Player/player.gd" id="1_bsiin"]
[ext_resource type="PackedScene" uid="uid://1a2ghebu1o2b" path="res://Assets/Models/PlayerFinal.glb" id="2_5w7dx"]
[ext_resource type="PackedScene" uid="uid://b0p64nur30g6o" path="res://Player/HUB_Player.tscn" id="3_sdeja"]
[ext_resource type="PackedScene" uid="uid://lubnvghxn08c" path="res://Assets/Arms/Axes/axe_oh_1_izquierda.tscn" id="3_uj4wq"]
[ext_resource type="PackedScene" uid="uid://d2600sd5xa4kr" path="res://Player/minimap.tscn" id="4_n8mky"]
[ext_resource type="PackedScene" uid="uid://expin8g6sjpk" path="res://Assets/Arms/Axes/axe_oh_1_derecha.tscn" id="4_wuw20"]
[ext_resource type="PackedScene" uid="uid://6jj1iq76wt3l" path="res://Player/propiedades_player.tscn" id="5_acxd1"]
[ext_resource type="PackedScene" uid="uid://doitukow7nmlh" path="res://Drops/loot_panel.tscn" id="6_je5n6"]
[ext_resource type="PackedScene" uid="uid://ddej6vktwvh2i" path="res://Assets/PJ1/base2.tscn" id="9_yf4q7"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_koob3"]
radius = 0.634474
height = 2.25914

[sub_resource type="Curve" id="Curve_jlv8h"]
_data = [Vector2(0.0194175, 1), 0.0, 0.0, 0, 0, Vector2(0.650485, 0.705263), -0.981926, -0.981926, 0, 0, Vector2(1, 0.0210526), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="AnimationNodeTransition" id="AnimationNodeTransition_5u7ar"]
xfade_curve = SubResource("Curve_jlv8h")
input_0/name = "Forward"
input_0/auto_advance = false
input_0/reset = true
input_1/name = "Backward"
input_1/auto_advance = false
input_1/reset = true
input_2/name = "Right"
input_2/auto_advance = false
input_2/reset = true
input_3/name = "Left"
input_3/auto_advance = false
input_3/reset = true
input_4/name = "ForwardR"
input_4/auto_advance = false
input_4/reset = true
input_5/name = "ForwardL"
input_5/auto_advance = false
input_5/reset = true
input_6/name = "BackwardR"
input_6/auto_advance = false
input_6/reset = true
input_7/name = "BackwardL"
input_7/auto_advance = false
input_7/reset = true
input_8/name = "Atacando"
input_8/auto_advance = false
input_8/reset = true

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_6fdy2"]
animation = &"JogBackwardDiagonalLeft"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_ptcwv"]
animation = &"JogBackwardDiagonalRight"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_3r2jo"]
animation = &"FallingIdle"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_6xles"]
animation = &"JogForwardDiagonalLeft"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_hvtwh"]
animation = &"JogForwardDiagonalRight"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_8kyyw"]
animation = &"Idle"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_46l17"]
animation = &"Jump"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_prx7c"]
animation = &"JogStrafeLeft"

[sub_resource type="AnimationNodeTransition" id="AnimationNodeTransition_ejpuk"]
input_0/name = "Idle"
input_0/auto_advance = false
input_0/reset = true
input_1/name = "Walk"
input_1/auto_advance = false
input_1/reset = true
input_2/name = "Jump"
input_2/auto_advance = false
input_2/reset = true

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_tvqs0"]
animation = &"JogStrafeRight"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_ycbh8"]
animation = &"Forward"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_62r5o"]
animation = &"Backward"

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_tejbi"]

[sub_resource type="AnimationNodeTimeScale" id="AnimationNodeTimeScale_g5mwg"]

[sub_resource type="AnimationNodeTransition" id="AnimationNodeTransition_jsck7"]
input_0/name = "false"
input_0/auto_advance = false
input_0/reset = true
input_1/name = "true"
input_1/auto_advance = false
input_1/reset = true

[sub_resource type="AnimationNodeBlendTree" id="AnimationNodeBlendTree_g4nac"]
graph_offset = Vector2(-89.3838, 75.0924)
nodes/AnimationWalk/node = SubResource("AnimationNodeTransition_5u7ar")
nodes/AnimationWalk/position = Vector2(-80, 240)
nodes/BackwardL/node = SubResource("AnimationNodeAnimation_6fdy2")
nodes/BackwardL/position = Vector2(-740, 1000)
nodes/BackwardR/node = SubResource("AnimationNodeAnimation_ptcwv")
nodes/BackwardR/position = Vector2(-740, 880)
nodes/FallingIdle/node = SubResource("AnimationNodeAnimation_3r2jo")
nodes/FallingIdle/position = Vector2(740, 520)
nodes/ForwardL/node = SubResource("AnimationNodeAnimation_6xles")
nodes/ForwardL/position = Vector2(-760, 740)
nodes/ForwardR/node = SubResource("AnimationNodeAnimation_hvtwh")
nodes/ForwardR/position = Vector2(-740, 620)
nodes/Idle/node = SubResource("AnimationNodeAnimation_8kyyw")
nodes/Idle/position = Vector2(320, 160)
nodes/Jump/node = SubResource("AnimationNodeAnimation_46l17")
nodes/Jump/position = Vector2(200, 580)
nodes/LeftStrafe/node = SubResource("AnimationNodeAnimation_prx7c")
nodes/LeftStrafe/position = Vector2(-720, 480)
nodes/Movements/node = SubResource("AnimationNodeTransition_ejpuk")
nodes/Movements/position = Vector2(600, 240)
nodes/RightStrafe/node = SubResource("AnimationNodeAnimation_tvqs0")
nodes/RightStrafe/position = Vector2(-700, 340)
nodes/Running/node = SubResource("AnimationNodeAnimation_ycbh8")
nodes/Running/position = Vector2(-640, 100)
"nodes/RunningBackward /node" = SubResource("AnimationNodeAnimation_62r5o")
"nodes/RunningBackward /position" = Vector2(-680, 220)
nodes/StateMachine/node = SubResource("AnimationNodeStateMachine_tejbi")
nodes/StateMachine/position = Vector2(-40, 700)
nodes/TimeScale/node = SubResource("AnimationNodeTimeScale_g5mwg")
nodes/TimeScale/position = Vector2(380, 540)
nodes/in_air/node = SubResource("AnimationNodeTransition_jsck7")
nodes/in_air/position = Vector2(1100, 200)
nodes/output/position = Vector2(1300, 200)
node_connections = [&"output", 0, &"in_air", &"AnimationWalk", 0, &"Running", &"AnimationWalk", 1, &"RunningBackward ", &"AnimationWalk", 2, &"RightStrafe", &"AnimationWalk", 3, &"LeftStrafe", &"AnimationWalk", 4, &"ForwardR", &"AnimationWalk", 5, &"ForwardL", &"AnimationWalk", 6, &"BackwardR", &"AnimationWalk", 7, &"BackwardL", &"AnimationWalk", 8, &"StateMachine", &"Movements", 0, &"Idle", &"Movements", 1, &"AnimationWalk", &"Movements", 2, &"TimeScale", &"TimeScale", 0, &"Jump", &"in_air", 0, &"Movements", &"in_air", 1, &"FallingIdle"]

[sub_resource type="AnimationNodeTransition" id="AnimationNodeTransition_8kfwp"]
input_0/name = "desarmado"
input_0/auto_advance = false
input_0/reset = true
input_1/name = "axeOH"
input_1/auto_advance = false
input_1/reset = true
input_2/name = "axeOH_Ambas"
input_2/auto_advance = false
input_2/reset = true
input_3/name = "axeAE"
input_3/auto_advance = false
input_3/reset = true

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_r2y0d"]
animation = &"IdleAxeOH_Ambas"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_31o4d"]
animation = &"IdleAxeOH_Right"

[sub_resource type="AnimationNodeBlendTree" id="AnimationNodeBlendTree_nr0o6"]
graph_offset = Vector2(-282.261, -81.0939)
nodes/AnimationWalk/node = SubResource("AnimationNodeTransition_5u7ar")
nodes/AnimationWalk/position = Vector2(-80, 240)
nodes/Armas?/node = SubResource("AnimationNodeTransition_8kfwp")
nodes/Armas?/position = Vector2(420, 100)
nodes/AxeOH_Ambas/node = SubResource("AnimationNodeAnimation_r2y0d")
nodes/AxeOH_Ambas/position = Vector2(100, 80)
nodes/AxeOH_R/node = SubResource("AnimationNodeAnimation_31o4d")
nodes/AxeOH_R/position = Vector2(100, -40)
nodes/BackwardL/node = SubResource("AnimationNodeAnimation_6fdy2")
nodes/BackwardL/position = Vector2(-740, 1000)
nodes/BackwardR/node = SubResource("AnimationNodeAnimation_ptcwv")
nodes/BackwardR/position = Vector2(-740, 880)
nodes/FallingIdle/node = SubResource("AnimationNodeAnimation_3r2jo")
nodes/FallingIdle/position = Vector2(740, 520)
nodes/ForwardL/node = SubResource("AnimationNodeAnimation_6xles")
nodes/ForwardL/position = Vector2(-760, 740)
nodes/ForwardR/node = SubResource("AnimationNodeAnimation_hvtwh")
nodes/ForwardR/position = Vector2(-740, 620)
nodes/Idle/node = SubResource("AnimationNodeAnimation_8kyyw")
nodes/Idle/position = Vector2(100, -160)
nodes/Jump/node = SubResource("AnimationNodeAnimation_46l17")
nodes/Jump/position = Vector2(220, 560)
nodes/LeftStrafe/node = SubResource("AnimationNodeAnimation_prx7c")
nodes/LeftStrafe/position = Vector2(-720, 480)
nodes/Movements/node = SubResource("AnimationNodeTransition_ejpuk")
nodes/Movements/position = Vector2(600, 240)
nodes/RightStrafe/node = SubResource("AnimationNodeAnimation_tvqs0")
nodes/RightStrafe/position = Vector2(-700, 340)
nodes/Running/node = SubResource("AnimationNodeAnimation_ycbh8")
nodes/Running/position = Vector2(-640, 100)
"nodes/RunningBackward /node" = SubResource("AnimationNodeAnimation_62r5o")
"nodes/RunningBackward /position" = Vector2(-680, 220)
nodes/StateMachine/node = SubResource("AnimationNodeStateMachine_tejbi")
nodes/StateMachine/position = Vector2(-40, 700)
nodes/TimeScale/node = SubResource("AnimationNodeTimeScale_g5mwg")
nodes/TimeScale/position = Vector2(380, 540)
nodes/in_air/node = SubResource("AnimationNodeTransition_jsck7")
nodes/in_air/position = Vector2(1100, 200)
nodes/output/position = Vector2(1300, 200)
node_connections = [&"output", 0, &"in_air", &"AnimationWalk", 0, &"Running", &"AnimationWalk", 1, &"RunningBackward ", &"AnimationWalk", 2, &"RightStrafe", &"AnimationWalk", 3, &"LeftStrafe", &"AnimationWalk", 4, &"ForwardR", &"AnimationWalk", 5, &"ForwardL", &"AnimationWalk", 6, &"BackwardR", &"AnimationWalk", 7, &"BackwardL", &"AnimationWalk", 8, &"StateMachine", &"Armas?", 0, &"Idle", &"Armas?", 1, &"AxeOH_R", &"Armas?", 2, &"AxeOH_Ambas", &"Movements", 0, &"Armas?", &"Movements", 1, &"AnimationWalk", &"Movements", 2, &"TimeScale", &"TimeScale", 0, &"Jump", &"in_air", 0, &"Movements", &"in_air", 1, &"FallingIdle"]

[node name="Player" type="CharacterBody3D" groups=["player"]]
script = ExtResource("1_bsiin")

[node name="PlayerModelo" parent="." instance=ExtResource("2_5w7dx")]
transform = Transform3D(-2, 0, 3.01992e-07, 0, 2, 0, -3.01992e-07, 0, -2, 0, 0, 0)
visible = false

[node name="Skeleton3D" parent="PlayerModelo/Armature" index="0"]
bones/0/position = Vector3(0.00833476, 0.579982, -0.00826748)
bones/0/rotation = Quaternion(-0.0410321, -0.365686, -0.0132792, 0.929739)
bones/1/rotation = Quaternion(0.00465948, 0.0404829, -0.0076917, 0.99914)
bones/2/rotation = Quaternion(0.0921166, 0.0814041, -0.00961252, 0.992369)
bones/3/rotation = Quaternion(0.0926327, 0.0813966, -0.00971333, 0.99232)
bones/4/rotation = Quaternion(0.0263521, -0.0106807, 0.00113591, 0.999595)
bones/5/rotation = Quaternion(-0.0597365, 0.177205, -0.00191384, 0.982358)
bones/7/rotation = Quaternion(-0.562856, -0.43983, 0.568074, -0.408699)
bones/8/rotation = Quaternion(0.421493, -0.00347121, 0.0642117, 0.904549)
bones/9/rotation = Quaternion(2.6077e-08, -9.31323e-08, 0.419806, 0.907614)
bones/10/rotation = Quaternion(-0.132983, 0.380348, -0.0162053, 0.915089)
bones/11/rotation = Quaternion(0.194541, 0.0433834, 0.403689, 0.89292)
bones/12/rotation = Quaternion(-0.00564021, 0.00142147, -0.202756, 0.979212)
bones/13/rotation = Quaternion(5.71999e-05, -0.000376325, 0.00294719, 0.999996)
bones/15/rotation = Quaternion(0.0283344, -0.0166349, 0.167626, 0.985303)
bones/16/rotation = Quaternion(0.139609, -0.00521423, -0.134029, 0.98108)
bones/17/rotation = Quaternion(-0.00151492, 0.018429, 0.147908, 0.988828)
bones/19/rotation = Quaternion(0.597898, -0.409057, 0.547463, 0.418897)
bones/20/rotation = Quaternion(0.45215, 0.0258047, 0.175273, 0.874171)
bones/21/rotation = Quaternion(-3.00352e-08, 2.23517e-08, -0.371052, 0.928612)
bones/22/rotation = Quaternion(0.0921204, -0.293106, -0.129321, 0.942804)
bones/23/rotation = Quaternion(0.0707808, 0.0738744, -0.393373, 0.913669)
bones/24/rotation = Quaternion(0.0848867, 0.00137313, 0.355751, 0.930717)
bones/25/rotation = Quaternion(0.00119853, 0.00765388, -0.0491841, 0.99876)
bones/27/rotation = Quaternion(0.0490053, 0.0177114, -0.0680725, 0.996319)
bones/28/rotation = Quaternion(0.130978, 0.000368054, 0.0498492, 0.990131)
bones/29/rotation = Quaternion(-0.000362518, -0.00577022, -0.0591551, 0.998232)
bones/31/rotation = Quaternion(0.0207061, 0.225265, 0.967971, -0.108898)
bones/32/rotation = Quaternion(-0.336247, 6.14136e-10, 5.65677e-10, 0.941774)
bones/33/rotation = Quaternion(0.436078, 0.00529181, -0.0712983, 0.897065)
bones/33/scale = Vector3(1.00003, 1, 1)
bones/34/rotation = Quaternion(0.428757, -0.0953912, 0.024925, 0.898024)
bones/36/rotation = Quaternion(-0.154517, -0.0262844, 0.975776, 0.152624)
bones/37/rotation = Quaternion(-0.297905, -1.7453e-08, -6.50687e-10, 0.954596)
bones/38/rotation = Quaternion(0.582759, 0.130838, 0.0866766, 0.797346)
bones/38/scale = Vector3(1.00003, 1, 1)
bones/39/rotation = Quaternion(0.416075, 0.116392, -0.0496071, 0.900485)

[node name="mano_izquierda" type="BoneAttachment3D" parent="PlayerModelo/Armature/Skeleton3D" index="1"]
transform = Transform3D(0.950818, -0.307328, 0.0386476, -0.235301, -0.79779, -0.555124, 0.201438, 0.518729, -0.830869, 0.182653, 0.51782, 0.240755)
bone_name = "mixamorig_LeftHandThumb4"
bone_idx = 14

[node name="Axe_OH_1_Izquierda" parent="PlayerModelo/Armature/Skeleton3D/mano_izquierda" instance=ExtResource("3_uj4wq")]

[node name="mano_derecha" type="BoneAttachment3D" parent="PlayerModelo/Armature/Skeleton3D" index="2"]
transform = Transform3D(0.293014, 0.165899, 0.941605, 0.402081, -0.914893, 0.0360715, 0.867453, 0.368031, -0.334781, -0.214637, 0.505661, -0.042515)
bone_name = "mixamorig_RightHandThumb4"
bone_idx = 26

[node name="Axe_OH_1_Izquierda" parent="PlayerModelo/Armature/Skeleton3D/mano_derecha" instance=ExtResource("4_wuw20")]
transform = Transform3D(-0.019327, 0.271352, 0.126469, -0.296819, -0.0338986, 0.0273732, 0.0390497, -0.123364, 0.27066, 0.0134996, 0.00475913, -0.0121553)

[node name="SpringArm3D" type="SpringArm3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.951056, 0.309017, 0, -0.309017, 0.951056, 0, 3, 3)

[node name="Camera3D" type="Camera3D" parent="SpringArm3D"]
current = true

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0958917, 1.08179, 0)
shape = SubResource("CapsuleShape3D_koob3")

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource("AnimationNodeBlendTree_g4nac")
anim_player = NodePath("../PlayerModelo/AnimationPlayer")
parameters/AnimationWalk/current_state = ""
parameters/AnimationWalk/transition_request = ""
parameters/AnimationWalk/current_index = -1
parameters/Movements/current_state = "Idle"
parameters/Movements/transition_request = ""
parameters/Movements/current_index = 0
parameters/TimeScale/scale = 3.0
parameters/in_air/current_state = "false"
parameters/in_air/transition_request = ""
parameters/in_air/current_index = 0

[node name="Player_HUB" parent="." instance=ExtResource("3_sdeja")]

[node name="Minimap" parent="." instance=ExtResource("4_n8mky")]
target = NodePath("..")

[node name="Ray1" type="RayCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.2, 0)
target_position = Vector3(0, 0, -0.7)

[node name="PropiedadesPlayer" parent="." instance=ExtResource("5_acxd1")]

[node name="TimerSaludManaEnergia" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[node name="LootPanel" parent="." instance=ExtResource("6_je5n6")]
visible = false

[node name="AnimationTree2" type="AnimationTree" parent="."]
tree_root = SubResource("AnimationNodeBlendTree_nr0o6")
anim_player = NodePath("../BaseJugador/AnimationPlayer")
advance_expression_base_node = NodePath("")
active = true
parameters/AnimationWalk/current_state = ""
parameters/AnimationWalk/transition_request = ""
parameters/AnimationWalk/current_index = -1
parameters/Armas?/current_state = "desarmado"
parameters/Armas?/transition_request = ""
parameters/Armas?/current_index = 0
parameters/Movements/current_state = "Idle"
parameters/Movements/transition_request = ""
parameters/Movements/current_index = 0
parameters/TimeScale/scale = 0.5
parameters/in_air/current_state = "false"
parameters/in_air/transition_request = ""
parameters/in_air/current_index = 0

[node name="BaseJugador" parent="." instance=ExtResource("9_yf4q7")]
transform = Transform3D(-1.3, 0, -1.1365e-07, 0, 1.3, 0, 1.1365e-07, 0, -1.3, 0, 0, 0)

[node name="Skeleton3D" parent="BaseJugador/Armature" index="0"]
bones/0/position = Vector3(0.00958696, 1.06682, 0.0132497)
bones/0/rotation = Quaternion(-0.0157138, 9.37434e-05, -0.0141432, 0.999777)
bones/1/rotation = Quaternion(-0.0581132, -0.000250824, 1.75808e-05, 0.99831)
bones/2/rotation = Quaternion(0.011792, -0.0196646, -0.0031134, 0.999732)
bones/3/rotation = Quaternion(0.0118023, -0.0196757, -0.00267285, 0.999733)
bones/4/rotation = Quaternion(0.0503067, 0.0074201, -0.0102365, 0.998654)
bones/5/rotation = Quaternion(0.0501947, -0.0156742, 0.0335929, 0.998051)
bones/7/rotation = Quaternion(-0.510564, -0.466258, 0.60008, -0.402282)
bones/8/rotation = Quaternion(0.490292, 0.16857, 0.0760264, 0.851715)
bones/9/rotation = Quaternion(-2.42784e-07, 1.76951e-08, 0.25058, 0.968096)
bones/10/rotation = Quaternion(0.114615, 0.114954, -0.182372, 0.969737)
bones/11/rotation = Quaternion(0.145252, -0.00752701, 0.138415, 0.979636)
bones/12/rotation = Quaternion(0.0160373, 0.0247599, -0.0856468, 0.995889)
bones/13/rotation = Quaternion(-0.0213775, 0.00151495, 0.0833111, 0.996293)
bones/15/rotation = Quaternion(0.170794, 0.00341207, 0.0485111, 0.984106)
bones/16/rotation = Quaternion(0.303108, -0.00231365, -0.0581317, 0.951179)
bones/17/rotation = Quaternion(0.150281, 0.000934488, -0.0346033, 0.988037)
bones/19/rotation = Quaternion(0.226026, 0.000570336, 0.0353727, 0.973479)
bones/20/rotation = Quaternion(0.205986, -0.000682554, -0.0469994, 0.977425)
bones/21/rotation = Quaternion(0.128513, 0.000392976, -0.030682, 0.991233)
bones/23/rotation = Quaternion(0.280691, -0.010369, 0.0280542, 0.959332)
bones/24/rotation = Quaternion(0.148809, 0.000152434, -0.035163, 0.988241)
bones/25/rotation = Quaternion(0.0954284, 0.000342717, -0.0184315, 0.995266)
bones/27/rotation = Quaternion(0.390308, 0.0160201, -0.0311235, 0.920019)
bones/28/rotation = Quaternion(0.187328, 0.00662576, 0.00249562, 0.982272)
bones/29/rotation = Quaternion(0.0664067, -0.000458893, -0.0113852, 0.997728)
bones/31/rotation = Quaternion(0.145252, -0.00752701, 0.138415, 0.979636)
bones/32/rotation = Quaternion(0.0160373, 0.0247599, -0.0856468, 0.995889)
bones/33/rotation = Quaternion(-0.0213775, 0.00151495, 0.0833111, 0.996293)
bones/34/rotation = Quaternion(0.170794, 0.00341207, 0.0485111, 0.984106)
bones/35/rotation = Quaternion(0.303108, -0.00231365, -0.0581317, 0.951179)
bones/36/rotation = Quaternion(0.150281, 0.000934488, -0.0346033, 0.988037)
bones/37/rotation = Quaternion(0.226026, 0.000570336, 0.0353727, 0.973479)
bones/38/rotation = Quaternion(0.205986, -0.000682554, -0.0469994, 0.977425)
bones/39/rotation = Quaternion(0.128513, 0.000392976, -0.030682, 0.991233)
bones/40/rotation = Quaternion(0.280691, -0.010369, 0.0280542, 0.959332)
bones/41/rotation = Quaternion(0.148809, 0.000152434, -0.035163, 0.988241)
bones/42/rotation = Quaternion(0.0954284, 0.000342717, -0.0184315, 0.995266)
bones/43/rotation = Quaternion(0.390308, 0.0160201, -0.0311235, 0.920019)
bones/44/rotation = Quaternion(0.187328, 0.00662576, 0.00249562, 0.982272)
bones/45/rotation = Quaternion(0.0664067, -0.000458893, -0.0113852, 0.997728)
bones/46/rotation = Quaternion(0.561717, -0.443834, 0.536144, 0.447254)
bones/47/rotation = Quaternion(0.516191, -0.152988, -0.105352, 0.836088)
bones/48/rotation = Quaternion(2.70666e-08, 1.45286e-07, -0.237159, 0.971471)
bones/49/rotation = Quaternion(0.0214467, -0.0281163, 0.171756, 0.984505)
bones/50/rotation = Quaternion(0.162957, -0.129026, -0.0299728, 0.977701)
bones/51/rotation = Quaternion(0.0224868, -0.0468437, -0.0511021, 0.997341)
bones/52/rotation = Quaternion(-0.0309313, -0.00637815, -0.0738425, 0.99677)
bones/54/rotation = Quaternion(0.0908723, -0.00628581, -0.0047601, 0.995831)
bones/55/rotation = Quaternion(0.328659, 0.00153306, 0.0524403, 0.94299)
bones/56/rotation = Quaternion(0.0661303, -3.75178e-05, 0.0152246, 0.997695)
bones/58/rotation = Quaternion(0.143574, -0.0049965, 0.0110812, 0.989565)
bones/59/rotation = Quaternion(0.267543, 0.00072463, 0.0512292, 0.962183)
bones/60/rotation = Quaternion(0.0473601, 0.0104719, 0.0110771, 0.998762)
bones/62/rotation = Quaternion(0.225698, -0.00505353, -0.00372973, 0.974177)
bones/63/rotation = Quaternion(0.214128, -0.000124578, 0.0420871, 0.975898)
bones/64/rotation = Quaternion(0.0749768, 0.0116788, 0.0115835, 0.99705)
bones/66/rotation = Quaternion(0.292346, -0.0140759, 0.028992, 0.95577)
bones/67/rotation = Quaternion(0.167075, 0.00013139, 0.0251845, 0.985622)
bones/68/rotation = Quaternion(0.0719799, -0.000127974, 0.00845697, 0.99737)
bones/70/rotation = Quaternion(0.162957, -0.129026, -0.0299728, 0.977701)
bones/71/rotation = Quaternion(0.0224868, -0.0468437, -0.0511021, 0.997341)
bones/72/rotation = Quaternion(-0.0309313, -0.00637815, -0.0738425, 0.99677)
bones/73/rotation = Quaternion(0.0908723, -0.00628581, -0.0047601, 0.995831)
bones/74/rotation = Quaternion(0.328659, 0.00153306, 0.0524403, 0.94299)
bones/75/rotation = Quaternion(0.0661303, -3.75178e-05, 0.0152246, 0.997695)
bones/76/rotation = Quaternion(0.143574, -0.0049965, 0.0110812, 0.989565)
bones/77/rotation = Quaternion(0.267543, 0.00072463, 0.0512292, 0.962183)
bones/78/rotation = Quaternion(0.0473601, 0.0104719, 0.0110771, 0.998762)
bones/79/rotation = Quaternion(0.225698, -0.00505353, -0.00372973, 0.974177)
bones/80/rotation = Quaternion(0.214128, -0.000124578, 0.0420871, 0.975898)
bones/81/rotation = Quaternion(0.0749768, 0.0116788, 0.0115835, 0.99705)
bones/82/rotation = Quaternion(0.292346, -0.0140759, 0.028992, 0.95577)
bones/83/rotation = Quaternion(0.167075, 0.00013139, 0.0251845, 0.985622)
bones/84/rotation = Quaternion(0.0719799, -0.000127974, 0.00845697, 0.99737)
bones/85/rotation = Quaternion(0.0604317, 0.0959676, 0.993168, -0.0275027)
bones/86/rotation = Quaternion(-0.246964, -5.61589e-07, 6.83723e-08, 0.969025)
bones/87/rotation = Quaternion(0.601134, 0.012981, 0.0293481, 0.798504)
bones/87/scale = Vector3(1.00003, 1, 1)
bones/88/rotation = Quaternion(0.260014, -0.0346783, 0.00962713, 0.964934)
bones/90/rotation = Quaternion(-0.128579, 0.0911242, 0.986065, 0.0532879)
bones/91/rotation = Quaternion(-0.203748, 3.19555e-06, 7.46136e-07, 0.979023)
bones/92/rotation = Quaternion(0.563475, -0.00403126, 0.0163427, 0.825962)
bones/92/scale = Vector3(1.00003, 1, 1)
bones/93/rotation = Quaternion(0.254656, 0.0320915, -0.00845542, 0.966462)
bones/96/position = Vector3(0.00945399, 1.06682, 0.0133449)
bones/96/rotation = Quaternion(-0.0156217, -0.00491549, -0.0142589, 0.999764)
bones/97/rotation = Quaternion(1, 1.24081e-10, -0.000172691, -4.88848e-12)
bones/99/rotation = Quaternion(0.0274861, 0.993178, -0.0959723, 0.0602602)
bones/100/rotation = Quaternion(-0.246964, -5.62045e-07, 6.68664e-08, 0.969025)
bones/106/rotation = Quaternion(-0.0533036, 0.986043, -0.091115, -0.128749)
bones/107/rotation = Quaternion(-0.203748, 3.20148e-06, 7.43223e-07, 0.979023)
bones/113/rotation = Quaternion(-0.0581132, -0.000250825, 1.7581e-05, 0.99831)
bones/114/rotation = Quaternion(0.011792, -0.0196646, -0.0031134, 0.999732)
bones/115/rotation = Quaternion(0.0118023, -0.0196757, -0.00267285, 0.999733)
bones/116/rotation = Quaternion(0.0503068, 0.0074201, -0.0102365, 0.998654)
bones/117/rotation = Quaternion(0.0501947, -0.0156742, 0.0335929, 0.998051)
bones/118/rotation = Quaternion(-0.510564, -0.466258, 0.60008, -0.402283)
bones/119/rotation = Quaternion(0.490292, 0.16857, 0.0760264, 0.851715)
bones/120/rotation = Quaternion(-2.45091e-07, 1.60893e-08, 0.250583, 0.968095)
bones/121/position = Vector3(0.192897, 0.086186, -0.0222997)
bones/124/rotation = Quaternion(0.561717, -0.443834, 0.536144, 0.447254)
bones/125/rotation = Quaternion(0.516191, -0.152988, -0.105352, 0.836088)
bones/126/rotation = Quaternion(3.00319e-08, 1.44723e-07, -0.237159, 0.971471)
bones/127/position = Vector3(-0.195425, 0.0907109, 0.00151847)
bones/130/position = Vector3(0.367308, 1.11657, -0.258606)
bones/130/rotation = Quaternion(-0.707107, 1.44056e-10, 2.07853e-09, 0.707107)
bones/131/position = Vector3(0.29505, 1.0057, 0.100133)
bones/131/rotation = Quaternion(0.875621, -0.00539539, -0.47989, 0.0544464)
bones/132/position = Vector3(-0.347139, 1.14348, -0.253776)
bones/132/rotation = Quaternion(-0.707107, 1.44056e-10, 2.07853e-09, 0.707107)
bones/133/position = Vector3(-0.26723, 1.02926, 0.102287)
bones/133/rotation = Quaternion(0.824915, -0.0346059, 0.54563, 0.14355)
bones/134/position = Vector3(0.111781, 0.0887385, -0.0265075)
bones/134/rotation = Quaternion(0.0600679, 0.704546, 0.704551, -0.0601235)
bones/135/rotation = Quaternion(-0.273537, 0.0425126, -0.012118, 0.960845)
bones/138/rotation = Quaternion(0.00378706, 0.000439214, 6.30368e-05, 0.999993)
bones/148/rotation = Quaternion(0.00380607, 0.000440555, 6.66142e-05, 0.999993)
bones/150/position = Vector3(0.186163, 0.551492, 0.596076)
bones/150/rotation = Quaternion(-0.707107, 6.14286e-06, 1.47582e-07, 0.707107)
bones/151/position = Vector3(-0.184961, 0.0886513, -0.000559684)
bones/151/rotation = Quaternion(-0.104106, 0.699393, 0.699402, 0.10416)
bones/152/rotation = Quaternion(-0.272025, -0.0419137, 0.011875, 0.961304)
bones/155/rotation = Quaternion(-1.13694e-05, 1.02865e-06, 5.44698e-06, 1)
bones/163/rotation = Quaternion(0.0435945, 1.58824e-08, 0.999049, -6.13443e-09)
bones/165/rotation = Quaternion(4.85027e-05, -5.79281e-06, -6.66997e-07, 1)
bones/167/position = Vector3(-0.291226, 0.586028, 0.571733)
bones/167/rotation = Quaternion(-0.707107, -7.68118e-06, -5.90011e-07, 0.707107)

[node name="mano_izquierda" parent="BaseJugador/Armature/Skeleton3D" index="1"]
transform = Transform3D(0.527262, -0.339029, -0.779137, -0.338295, -0.924903, 0.173524, -0.779456, 0.172086, -0.602358, 0.243789, 0.902624, 0.127992)

[node name="mano_derecha" parent="BaseJugador/Armature/Skeleton3D" index="2"]
transform = Transform3D(0.656476, 0.250346, 0.711594, 0.37042, -0.928743, -0.0149871, 0.657136, 0.273427, -0.702431, -0.234897, 0.922254, 0.140674)

[connection signal="timeout" from="TimerSaludManaEnergia" to="." method="_on_timer_salud_mana_energia_timeout"]

[editable path="PlayerModelo"]
[editable path="BaseJugador"]
